Project architecture base

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,16 @@
-div {
-    color: red;
-  }
+// ==========================================================================
+// Library
+// ==========================================================================
+@import './variables/index';
+@import './functions/index';
+@import './mixins/index';
+
+// ==========================================================================
+// Tags definitions for common base
+// ==========================================================================
+@import './common/index';
+
+// ==========================================================================
+// UI Components
+// ==========================================================================
+@import './components/index';
