--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,4 +13,4 @@
 // ==========================================================================
 // UI Components
 // ==========================================================================
-@import './components/index';
+@import '../components/index';
